--- a/index.html
+++ b/index.html
@@ -5,7 +5,86 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="index.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6"
+      crossorigin="anonymous"
+    />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-dark">
+      <div class="container">
+        <a class="navbar-brand" href="#">Navbar</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <div class="container text-center">
+      <h2>Exercise 1</h2>
+      <div>
+        <p>
+          Ricreate this table just using Bootstrap classes or styling . without
+          adding / remove any DOM element
+        </p>
+      </div>
+      <div class="row first-table">
+        <div
+          class="col-6 tables one d-flex justify-content-center align-items-center"
+        >
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae,
+          ipsam! Adipisci quibusdam corrupti explicabo nihil?
+        </div>
+        <div
+          class="col-2 tables two d-flex justify-content-center align-items-end"
+        >
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus
+          praesentium possimus maxime architecto, aut expedita?
+        </div>
+        <div class="col-4 tables three">
+          <div class="row zbi">
+            <div
+              class="col-12 d-flex justify-content-center align-items-center"
+            >
+              ez
+            </div>
+            <div
+              class="col-12 d-flex justify-content-center align-items-center"
+              id="second-inner-col"
+            >
+              ze
+            </div>
+            <div
+              class="col-12 d-flex justify-content-center align-items-center"
+              id="third-inner-col"
+            >
+              ze
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
