--- a/index.html
+++ b/index.html
@@ -1,188 +1,277 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link rel="stylesheet" href="index.css"/>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="index.css" />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+      crossorigin="anonymous"
+    />
     <title>Document</title>
-</head>
-<body>
-<nav class="navbar navbar-expand-lg navbar-dark">
-    <div class="container">
+  </head>
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-dark">
+      <div class="container">
         <a class="navbar-brand" href="#">Navbar</a>
         <button
-                class="navbar-toggler"
-                type="button"
-                data-bs-toggle="collapse"
-                data-bs-target="#navbarNav"
-                aria-controls="navbarNav"
-                aria-expanded="false"
-                aria-label="Toggle navigation"
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
         >
-            <span class="navbar-toggler-icon"></span>
+          <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                </li>
-            </ul>
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+          </ul>
         </div>
-    </div>
-</nav>
-<div class="container text-center mt-5">
-    <div class="container ">
+      </div>
+    </nav>
+    <div class="container text-center mt-5">
+      <div class="container">
         <h2>Exercise 1</h2>
         <div>
-            <p>
-                Ricreate this table just using Bootstrap classes or styling . without
-                adding / remove any DOM element
-            </p>
+          <p>
+            Ricreate this table just using Bootstrap classes or styling .
+            without adding / remove any DOM element
+          </p>
         </div>
-    </div>
-    <div class="row first-table">
+      </div>
+      <div class="row first-table">
         <div
-                class="col-6 tables one d-flex justify-content-center align-items-center"
+          class="col-6 tables one d-flex justify-content-center align-items-center"
         >
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae,
-            ipsam! Adipisci quibusdam corrupti explicabo nihil?
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae,
+          ipsam! Adipisci quibusdam corrupti explicabo nihil?
         </div>
         <div
-                class="col-2 tables two d-flex justify-content-center align-items-end"
+          class="col-2 tables two d-flex justify-content-center align-items-end"
         >
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus
-            praesentium possimus maxime architecto, aut expedita?
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus
+          praesentium possimus maxime architecto, aut expedita?
         </div>
         <div class="col-4 tables three">
-            <div class="row zbi">
-                <div
-                        class="col-12 d-flex justify-content-center align-items-center"
-                >
-                    ez
-                </div>
-                <div
-                        class="col-12 d-flex justify-content-center align-items-center"
-                        id="second-inner-col"
-                >
-                    ze
-                </div>
-                <div
-                        class="col-12 d-flex justify-content-center align-items-center"
-                        id="third-inner-col"
-                >
-                    ze
-                </div>
+          <div class="row zbi">
+            <div
+              class="col-12 d-flex justify-content-center align-items-center"
+            >
+              ez
             </div>
-        </div>
-    </div>
-</div>
-<div class="container text-center mt-5">
-    <div class="container">
-        <h2>Exercise 2</h2>
-        <div>
-            <p>
-                Create a pricing table to sell your product! Classical, 3 card approach with 3 pricing. This is a
-                classical user/priced product, with new feature enabled for the pro / enterprise version.
-            </p>
-        </div>
-    </div>
-
-    <div class="container">
-        <div class="card-deck mb-3 text-center  d-flex justify-content-between">
-            <div class="card mb-4 box-shadow">
-                <div class="card-header">
-                    <h4 class="my-0 font-weight-normal">Free</h4>
-                </div>
-                <div class="card-body">
-                    <h1 class="card-title pricing-card-title">$0 <small class="text-muted">/ mo</small></h1>
-                    <ul class="list-unstyled mt-3 mb-4">
-                        <li>10 users included</li>
-                        <li>2 GB of storage</li>
-                        <li>Email support</li>
-                        <li>Help center access</li>
-                    </ul>
-                    <button type="button" class="btn btn-lg btn-block btn-outline-primary">Sign up for free</button>
-                </div>
+            <div
+              class="col-12 d-flex justify-content-center align-items-center"
+              id="second-inner-col"
+            >
+              ze
             </div>
-            <div class="card mb-4 box-shadow">
-                <div class="card-header">
-                    <h4 class="my-0 font-weight-normal">Pro</h4>
-                </div>
-                <div class="card-body">
-                    <h1 class="card-title pricing-card-title">$15 <small class="text-muted">/ mo</small></h1>
-                    <ul class="list-unstyled mt-3 mb-4">
-                        <li>20 users included</li>
-                        <li>10 GB of storage</li>
-                        <li>Priority email support</li>
-                        <li>Help center access</li>
-                    </ul>
-                    <button type="button" class="btn btn-lg btn-block btn-primary">Get started</button>
-                </div>
-            </div>
-            <div class="card mb-4 box-shadow">
-                <div class="card-header">
-                    <h4 class="my-0 font-weight-normal">Enterprise</h4>
-                </div>
-                <div class="card-body">
-                    <h1 class="card-title pricing-card-title">$29 <small class="text-muted">/ mo</small></h1>
-                    <ul class="list-unstyled mt-3 mb-4">
-                        <li>30 users included</li>
-                        <li>15 GB of storage</li>
-                        <li>Phone and email support</li>
-                        <li>Help center access</li>
-                    </ul>
-                    <button type="button" class="btn btn-lg btn-block btn-primary">Contact us</button>
-                </div>
-            </div>
-        </div>
-        <!--
-        <footer class="pt-4 my-md-5 pt-md-5 border-top">
-          <div class="row">
-            <div class="col-12 col-md">
-              <img class="mb-2" src="https://getbootstrap.com/docs/4.0/assets/brand/bootstrap-solid.svg" alt="" width="24" height="24">
-              <small class="d-block mb-3 text-muted">© 2017-2018</small>
-            </div>
-            <div class="col-6 col-md">
-              <h5>Features</h5>
-              <ul class="list-unstyled text-small">
-                <li><a class="text-muted" href="#">Cool stuff</a></li>
-                <li><a class="text-muted" href="#">Random feature</a></li>
-                <li><a class="text-muted" href="#">Team feature</a></li>
-                <li><a class="text-muted" href="#">Stuff for developers</a></li>
-                <li><a class="text-muted" href="#">Another one</a></li>
-                <li><a class="text-muted" href="#">Last time</a></li>
-              </ul>
-            </div>
-            <div class="col-6 col-md">
-              <h5>Resources</h5>
-              <ul class="list-unstyled text-small">
-                <li><a class="text-muted" href="#">Resource</a></li>
-                <li><a class="text-muted" href="#">Resource name</a></li>
-                <li><a class="text-muted" href="#">Another resource</a></li>
-                <li><a class="text-muted" href="#">Final resource</a></li>
-              </ul>
-            </div>
-            <div class="col-6 col-md">
-              <h5>About</h5>
-              <ul class="list-unstyled text-small">
-                <li><a class="text-muted" href="#">Team</a></li>
-                <li><a class="text-muted" href="#">Locations</a></li>
-                <li><a class="text-muted" href="#">Privacy</a></li>
-                <li><a class="text-muted" href="#">Terms</a></li>
-              </ul>
+            <div
+              class="col-12 d-flex justify-content-center align-items-center"
+              id="third-inner-col"
+            >
+              ze
             </div>
           </div>
-        </footer>
-        -->
+        </div>
+      </div>
     </div>
-</div>
-<script
-        src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
-        crossorigin="anonymous"
-></script>
-</body>
+    <div class="container text-center mt-5">
+      <div class="container">
+        <h2>Exercise 2</h2>
+        <div>
+          <p>
+            Create a pricing table to sell your product! Classical, 3 card
+            approach with 3 pricing. This is a classical user/priced product,
+            with new feature enabled for the pro / enterprise version.
+          </p>
+        </div>
+      </div>
+
+      <div class="container">
+        <div class="card-deck mb-3 text-center d-flex justify-content-between">
+          <div class="card mb-4 box-shadow">
+            <div class="card-header">
+              <h4 class="my-0 font-weight-normal">Free</h4>
+            </div>
+            <div class="card-body">
+              <h1 class="card-title pricing-card-title">
+                $0 <small class="text-muted">/ mo</small>
+              </h1>
+              <ul class="list-unstyled mt-3 mb-4">
+                <li>10 users included</li>
+                <li>2 GB of storage</li>
+                <li>Email support</li>
+                <li>Help center access</li>
+              </ul>
+              <button
+                type="button"
+                class="btn btn-lg btn-block btn-outline-primary"
+              >
+                Sign up for free
+              </button>
+            </div>
+          </div>
+          <div class="card mb-4 box-shadow">
+            <div class="card-header">
+              <h4 class="my-0 font-weight-normal">Pro</h4>
+            </div>
+            <div class="card-body">
+              <h1 class="card-title pricing-card-title">
+                $15 <small class="text-muted">/ mo</small>
+              </h1>
+              <ul class="list-unstyled mt-3 mb-4">
+                <li>20 users included</li>
+                <li>10 GB of storage</li>
+                <li>Priority email support</li>
+                <li>Help center access</li>
+              </ul>
+              <button type="button" class="btn btn-lg btn-block btn-primary">
+                Get started
+              </button>
+            </div>
+          </div>
+          <div class="card mb-4 box-shadow">
+            <div class="card-header">
+              <h4 class="my-0 font-weight-normal">Enterprise</h4>
+            </div>
+            <div class="card-body">
+              <h1 class="card-title pricing-card-title">
+                $29 <small class="text-muted">/ mo</small>
+              </h1>
+              <ul class="list-unstyled mt-3 mb-4">
+                <li>30 users included</li>
+                <li>15 GB of storage</li>
+                <li>Phone and email support</li>
+                <li>Help center access</li>
+              </ul>
+              <button type="button" class="btn btn-lg btn-block btn-primary">
+                Contact us
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="container">
+          <h2>Exercise 3</h2>
+          <div>
+            <p>
+              Create a pricing table to sell your product! Classical, 3 card
+              approach with 3 pricing. This is a classical user/priced product,
+              with new feature enabled for the pro / enterprise version.
+            </p>
+          </div>
+          <div class="row" id="cards"></div>
+        </div>
+        <div class="container">
+          <h2>Exercise 4</h2>
+          <div>
+            <p>
+              Create a pricing table to sell your product! Classical, 3 card
+              approach with 3 pricing. This is a classical user/priced product,
+              with new feature enabled for the pro / enterprise version.
+            </p>
+          </div>
+          <div class="row">
+            <div class="col-8" id="feed">
+              <div
+                class="feed-title d-flex justify-content-center align-items-center"
+              >
+                <h1>Page Heading</h1>
+                <h4>Secondary text</h4>
+              </div>
+            </div>
+            <div class="col-4" id="side">
+              <div class="card mt-4">
+                <h5 class="card-header">Find my blog</h5>
+                <div class="card-body">
+                  <form class="form-inline my-2 my-lg-0">
+                    <input
+                      class="form-control mr-sm-2"
+                      type="search"
+                      placeholder="Search"
+                      aria-label="Search"
+                    />
+                    <button
+                      class="btn bg-dark my-2 my-sm-0"
+                      style="color: white"
+                      type="submit"
+                    >
+                      Search
+                    </button>
+                  </form>
+                </div>
+              </div>
+              <div class="card mt-5">
+                <h5 class="card-header">Find my blog</h5>
+                <div class="card-body">
+                  <div class="row">
+                    <div class="col-6"><a href="#">Web design</a></div>
+                    <div class="col-6"><a href="#">Html</a></div>
+                    <div class="col-6"><a href="#">Javascript</a></div>
+                    <div class="col-6"><a href="#">Css</a></div>
+                    <div class="col-6"><a href="#">BOOTSTRAP</a></div>
+                    <div class="col-6"><a href="#">SASS</a></div>
+                  </div>
+                </div>
+              </div>
+              <div class="card mt-5">
+                <h5 class="card-header">Widgets</h5>
+                <div class="card-body">
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                  Minima, unde.
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
+      crossorigin="anonymous"
+    ></script>
+    <script>
+      (function cards() {
+        const cards = document.getElementById('cards');
+        for (let i = 0; i < 12; i++) {
+          cards.innerHTML += `<div class="col-md-4">
+               <div class="card mb-4 box-shadow">
+                 <img class="card-img-top" src="https://via.placeholder.com/150" alt="Card image cap">
+                 <div class="card-body">
+                   <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                   <div class="d-flex justify-content-between align-items-center">
+                     <div class="btn-group">
+                       <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                       <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                     </div>
+                     <small class="text-muted">9 mins</small>
+                   </div>
+                 </div>
+               </div>
+             </div>`;
+        }
+      })();
+      (function feed() {
+        const feed = document.getElementById('feed');
+        for (let index = 0; index < 5; index++) {
+          feed.innerHTML += `<div class="card mb-3">
+  <img class="card-img-top img-cards" src="https://via.placeholder.com/750" alt="Card image cap">
+  <div class="card-body">
+    <h5 class="card-title">Card title</h5>
+    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+    <button type="button" class="btn btn-primary">read more</button>
+  </div>
+</div>`;
+        }
+      })();
+    </script>
+  </body>
 </html>
